# crowd_funding

./: Cargo.toml  README.md  package-lock.json
src/: lib.rs  main.rs  project.rs  stellar.rs
src/tests/: project_tests.rs  stellar_tests.rs
static/: app.js  index.html  style.css
