[package]
name = "crowd_funding"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk="21.6.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ureq = "2.10.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
getrandom = { version = "0.2.15", features = ["js"] }

[lib]
crate-type = ["cdylib"]
doctest = false

[[bin]]
name = "crowd_funding_bin"
path = "src/main.rs"